[package]
name = "debris-wasm-test"
version = "0.1.0"
authors = ["Inky-developer <developerinky@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# wee_alloc = "0.4"
# no default features to disable color output
debris-lang = {git="https://github.com/Inky-developer/debris", default_features=false}
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
codegen-units = 1